v1.1.0/modules/schema/pages/class/RealEnergy.adoc
= `RealEnergy`
:toclevels: 4


+++Real electrical energy.+++


[cols="h,3",width=60%]
|===
| Type
| CIM data type class


| URI
| `cim:RealEnergy`


| CIM standard (perspective)
| IEC61970 (Grid)


|===

== Slots

[cols="1,1,2",width=100%]
|===
| Name | Type | Description

| `value`
| 0..1 +
https://w3id.org/linkml/Float[`float`]
//| +++None+++
| n/a

| `multiplier`
| 0..1 +
xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
//| +++None+++
| n/a

| `unit`
| 0..1 +
xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
//| +++None+++
| n/a
|===

////

'''


//[discrete]
[#multiplier]
=== `multiplier`


[cols="h,1",width=60%]
|===
| URI
| `cim:RealEnergy.multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
|===

//[discrete]
[#unit]
=== `unit`


[cols="h,1",width=60%]
|===
| URI
| `cim:RealEnergy.unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
|===

//[discrete]
[#value]
=== `value`


[cols="h,1",width=60%]
|===
| URI
| `cim:RealEnergy.value`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]
|===

////

== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/AccountingUnit.adoc[`AccountingUnit`] | xref::class/AccountingUnit.adoc#energyUnit[`energyUnit`]



| xref::class/BatteryUnit.adoc[`BatteryUnit`] | xref::class/BatteryUnit.adoc#storedE[`storedE`]



| xref::class/CAESPlant.adoc[`CAESPlant`] | xref::class/CAESPlant.adoc#energyStorageCapacity[`energyStorageCapacity`]



| xref::class/ProfileData.adoc[`ProfileData`] | xref::class/ProfileData.adoc#energyLevel[`energyLevel`]



| xref::class/RemoteConnectDisconnectInfo.adoc[`RemoteConnectDisconnectInfo`] | xref::class/RemoteConnectDisconnectInfo.adoc#energyUsageWarning[`energyUsageWarning`]



| xref::class/Transaction.adoc[`Transaction`] | xref::class/Transaction.adoc#serviceUnitsError[`serviceUnitsError`]



| xref::class/UnitInitialConditions.adoc[`UnitInitialConditions`] | xref::class/UnitInitialConditions.adoc#cumEnergy[`cumEnergy`]


|===

